--- a/public/css/template.css
+++ b/public/css/template.css
@@ -39,3 +39,22 @@
 a.btn-link:hover {
     text-decoration: none;
 }
+
+.introduce{
+    max-height: 100px;
+    overflow-y: auto;
+}
+
+.scrollbar-style::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-style::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-style::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #cccccc; }
