--- a/public/css/template.css
+++ b/public/css/template.css
@@ -58,3 +58,8 @@ background-color: #F5F5F5; }
 border-radius: 10px;
 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 background-color: #cccccc; }
+
+.img-clover{
+    background-position:center; 
+    background-repeat:none;
+}
