--- a/public/css/template.css
+++ b/public/css/template.css
@@ -63,3 +63,7 @@ background-color: #cccccc; }
     background-position:center; 
     background-repeat:none;
 }
+
+.img-gradient-overlay { /* FF3.6+ */ /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient( top, transparent 0%, rgba(0, 0, 0, 0.1) 100%);
+}
