--- a/public/css/template.css
+++ b/public/css/template.css
@@ -67,3 +67,7 @@ background-color: #cccccc; }
 .img-gradient-overlay { /* FF3.6+ */ /* Chrome,Safari4+ */
     background: -webkit-linear-gradient( top, transparent 0%, rgba(0, 0, 0, 0.1) 100%);
 }
+
+.pagination {
+    justify-content: center;
+}
